--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section class="intro">
             <h1>欢迎来到我们的 IT 工作室</h1>
             <p>我们专注于基于 AI 的 App、Web、小程序 产品研发</p>
+            <!-- 新增按钮 -->
+            <button onclick="alert('按钮已点击')">点击我</button>
+            <!-- 新增跳转链接 -->
+            <a href="https://example.com" target="_blank">访问外部链接</a>
         </section>
         <section class="services">
             <h2>我们的服务</h2>
