--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <li>小程序开发</li>
             </ul>
             <!-- 新增按钮 -->
-            <button onclick="alert('按钮已点击')">点击我</button>
+            <button onclick="console.log('按钮已点击')">点击我</button>
             <!-- 新增跳转链接 -->
             <a href="https://example.com" target="_blank">访问外部链接</a>
         </section>
