--- a/index.html
+++ b/index.html
@@ -62,6 +62,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <footer>
         <p>&copy; 2024 我们的IT工作室</p>
     </footer>
+
+     <!-- GTM 变量示例 -->
+    <script>
+        // 设置第一方 Cookie
+        document.cookie = "user_cookie=example_value; path=/";
+
+        // 设置数据层变量
+        window.dataLayer = window.dataLayer || [];
+        window.dataLayer.push({
+            'userId': '12345'
+        });
+
+        // 自定义 JavaScript 变量
+        function getCurrentDateTime() {
+            return new Date().toISOString();
+        }
+
+        // 全局 JavaScript 变量
+        window.userStatus = 'active';
+    </script>
+
+    
     <script src="script.js"></script>
 </body>
 </html>
